# simdlib-rs

./: .gitmodules  Cargo.toml  README.md
examples/: cpu_info.rs
simdlib-sys/: Cargo.toml  build.rs  update_bindings.sh
simdlib-sys/src/: bindings.rs  lib.rs
src/: correlation.rs  info.rs  lib.rs
